--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.5.0/modern-normalize.css"
+		/>
+    <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <title>Credo</title>
+    <title>Github Getter</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
